k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
  labels:
    app: registration-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
      - name: registration-service
        image: cntseedreams/registration-service:test1
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-service-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-service-db
  template:
    metadata:
      labels:
        app: register-service-db
    spec:
      containers:
      - name: register-service-db
        image: postgres:14.1-alpine
        ports:
        - containerPort: 5432
