k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registration-service
spec:
  selector:
    app.kubernetes.io/name: registration-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: register-service-db
spec:
  selector:
    app.kubernetes.io/name: register-service-db
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5432
